# licenta2025

./: README.md
hardware/esp32-c2-sensors/project-name/: CMakeLists.txt  sdkconfig
hardware/esp32-c2-sensors/project-name/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  station_example_main.c
hardware/esp32-c3-bridge/softAP/: sdkconfig
hardware/esp32-c3-bridge/softAP/main/: idf_component.yml  softap_example_main.c
hardware/raspberry-pi-server/: proxy.py  requirements.txt  server.py
software/smart-home-app/: App.tsx  app.json  package-lock.json  package.json  test-data-flow.js
software/smart-home-app/src/api/: mockData.ts  smartHomeApi.ts
software/smart-home-app/src/components/: BarChartCard.tsx  DeviceCard.tsx  InfoCard.tsx  IntervalSelector.tsx  SensorChart.tsx
software/smart-home-app/src/hooks/: useLiveStatus.ts
software/smart-home-app/src/navigation/: AppNavigator.tsx
software/smart-home-app/src/screens/: DevicesScreen.tsx  GraphsScreen.tsx  HomeScreen.tsx  SettingsScreen.tsx  StatsScreen.tsx
software/smart-home-app/src/utils/: theme.ts
